--- a/repertoire.html
+++ b/repertoire.html
@@ -121,9 +121,13 @@
             
     Marche funèbre, Op. 59<br>
 
-    Fantasia on Rossini’s “Moses,” Op. 33<br>
+    Fantaisie sur l´opéra « Moïse » de Rossini, Op. 33<br>
 
-    Fantasia on Rossini’s “Barber of Seville,” Op. 63<br><br>
+    Grande caprice sur des motifs de « La Sonnambula » de Bellini, Op. 46
+
+    Grande fantaisie sur des motifs de l´opéra « Semiramide » de Rossini, Op. 51 <br>
+
+    Grande fantaisie sur « Le barbier de Séville » de Rossini, Op. 63<br><br>
 
             <b>Concerti :</b><br>
 
