--- a/repertoire.html
+++ b/repertoire.html
@@ -123,9 +123,9 @@
 
     Fantaisie sur l´opéra « Moïse » de Rossini, Op. 33<br>
 
-    Grande caprice sur des motifs de « La Sonnambula » de Bellini, Op. 46
+    Grande caprice sur des motifs de « La Sonnambula » de Bellini, Op. 46<br>
 
-    Grande fantaisie sur des motifs de l´opéra « Semiramide » de Rossini, Op. 51 <br>
+    Grande fantaisie sur des motifs de l´opéra « Semiramide » de Rossini, Op. 51<br>
 
     Grande fantaisie sur « Le barbier de Séville » de Rossini, Op. 63<br><br>
 
