Add Google Analytics tracking

--- a/essays.html
+++ b/essays.html
@@ -2,6 +2,16 @@
 
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-57376253-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-57376253-2');
+</script>
+
 <title>essays</title>
 <meta http-equiv="Content-Type" content="text/html; charset="UTF-8"">
 <link rel="stylesheet" href="main.css">
