--- a/listening.html
+++ b/listening.html
@@ -27,6 +27,36 @@
             <li value=5>listening to / écoute actuellement</li>
 	
 		<p>
+                March 2020 :<br>
+                <ul>
+                        <li>Stella Donnelly - Beware of the Dogs (2019)</li>
+                        <li>The Weeknd - After Hours (2020)</li>
+                        <li>100 gecs - 1000 gecs (2019)</li>
+                        <li>Behemoth - The Satanist (2014)</li>
+                        <li>Let's Eat Grandma - I'm All Ears (2018)</li>
+                </ul>
+
+                February 2020 :<br>
+                <ul>
+                        <li>OM - Advaitic Songs (2012)</li>
+                        <li>Sam Talmadge - Solo Guitar (2019)</li>
+                        <li>Russian Circles - Audiotree Far Out (2019)</li>
+                        <li>Godspeed You! Black Emperor - Luciferian Towers (2017)</li>
+                        <li>Evidence - Weather or Not (2018)</li>
+                </ul>
+                <br>
+
+
+                January 2020 :<br>
+            <ul>
+                <li>Destroyer - Destroyer's Rubies (2006)</li>
+                <li>Drudkh - Blood In Our Wells (2010)</li>
+                <li>Eminem - Kamikaze (2018)</li>
+                <li>Margo Price - Midwest Farmer's Daughter (2016)</li>
+                <li>Misþyrming - Algleymi (2019)</li>
+        </ul>
+            <br>
+
             December 2019 :<br>
             <ul>
         <li>Mgła - Age of Excuse (2019)</li>
