--- a/listening.html
+++ b/listening.html
@@ -27,7 +27,8 @@
             <li value=5>listening to / écoute actuellement</li>
 	
 		<p>
-                March 2020 :<br>
+
+                March 2020 :
                 <ul>
                         <li>Stella Donnelly - Beware of the Dogs (2019)</li>
                         <li>The Weeknd - After Hours (2020)</li>
