Update listening and reading Nov 2020

--- a/reading.html
+++ b/reading.html
@@ -27,16 +27,12 @@
             <li value=6>reading</li>
 	
 		<p>
-            December 2019 :<br>
+            November 2020 :<br>
             <ul>
-        <li>J.D. Salinger - The Catcher in the Rye (1951)</li>
+                <li>David Markson - Wittgenstein's Mistress (1988)</li>
                 <li>William Gaddis - The Recognitions (1955)</li>
-                <li>Miriam Toews - A Complicated Kindness (2004)</li>
-        </ul>
-            <br>
-            November 2019 :<br>
-            <ul>
-        <li>Karl Ove Knausgaard - My Struggle : Book Six (2018)</li>
+                <li>John Williams - Augustus (1972)</li>
+                <li>Bryan Lee O'Malley - Scott Pilgrim (Colourised) (2004 - 2010)</li>
         </ul>
             
         </ol>
