add medtner paper

--- a/essays.html
+++ b/essays.html
@@ -26,6 +26,7 @@
 	<ol>
         	<li value=4>essays</li>
 		<p>
+            <a href="documents/wu_teng-Philosophy_Personality_Poetry-Nikolai_Medtner(2020).pdf" target="_blank">“And the stream leapt and danced and rushed noisily on”: Philosophy, Personality, and Poetry in the Works of Nikolai Medtner (2020)</a><br>
             <a href="documents/wu_teng-liszt_thalberg_and_thumbs(2017).pdf" target="_blank">Liszt, Thalberg, and Thumbs (2017)</a>
            
             
