--- a/repertoire.html
+++ b/repertoire.html
@@ -24,7 +24,7 @@
 <td>
 <p align="left"><a href="index.html">George Wu Teng</a></p>
 	<ol>
-            <li value=8>current repertoire / répertoire actuel</li>
+            <li value=9>current repertoire / répertoire actuel</li>
 	
 		<p>
             <b>Charles-Valentin Alkan</b><br>
@@ -98,6 +98,10 @@
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; No. 1, 4<br>
 
     Hexaméron (Thalberg, Pixis, Herz, Czerny, Chopin)<br><br>
+    
+    <b>Nikolai Medtner</b><br>
+    
+            Piano Sonata, Op.25 No.2, "Night Wind"<br> <br>
 
     <b>W.A. Mozart</b><br>
 
