--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-57376253-2');
 </script>
 
-<title>essays</title>
+<title>blog</title>
 <meta http-equiv="Content-Type" content="text/html; charset="UTF-8"">
 <link rel="stylesheet" href="main.css">
 </head>
@@ -24,10 +24,9 @@
 <td>
 <p align="left"><a href="index.html">George Wu Teng</a></p>
 	<ol>
-        	<li value=5>essays</li>
+        	<li value=2>blog</li>
 		<p>
-            <a href="documents/wu_teng-Philosophy_Personality_Poetry-Nikolai_Medtner(2020).pdf" target="_blank">“And the stream leapt and danced and rushed noisily on”: Philosophy, Personality, and Poetry in the Works of Nikolai Medtner (2020)</a><br>
-            <a href="documents/wu_teng-liszt_thalberg_and_thumbs(2017).pdf" target="_blank">Liszt, Thalberg, and Thumbs (2017)</a>
+            To be updated... Soon...
            
             
         </p>
