Update reading and listening

--- a/listening.html
+++ b/listening.html
@@ -28,13 +28,13 @@
 	
 		<p>
 
-                November 2020 :<br>
+                June 2021 :<br>
                 <ul>
-                        <li>Liturgy - Origin of the Alimonies (2020)</li>
-                        <li>NSYNC - Home For Christmas (1998)</li>
-                        <li>Phoebe Bridgers - Punisher (2020)</li>
-                        <li>Plaga -  Magia Gwiezdnej Entropii (2013)</li>
-                        <li>MSW - Obliviosus (2020)</li>
+                        <li>Pale Waves - Who Am I? (2021)</li>
+                        <li>Bell Witch - Four Phantoms (2015)</li>
+                        <li>Big Thief - U.F.O.F. (2019)</li>
+                        <li>Amenra -  Mass VI (2017)</li>
+                        <li>Wolf Alice - Blue Weekend (2021)</li>
                 </ul>
 
             
