--- a/reading.html
+++ b/reading.html
@@ -27,12 +27,10 @@
             <li value=7>reading</li>
 	
 		<p>
-            November 2020 :<br>
+            June 2021 :<br>
             <ul>
-                <li>David Markson - Wittgenstein's Mistress (1988)</li>
-                <li>William Gaddis - The Recognitions (1955)</li>
-                <li>John Williams - Augustus (1972)</li>
-                <li>Bryan Lee O'Malley - Scott Pilgrim (Colourised) (2004 - 2010)</li>
+                <li>Marieke Lucas Rijneveld - The Discomfort of Evening (2020)</li>
+                <li>Karl Ove Knausgaard & Fredrik Ekelund - Home and Away: Writing the Beautiful Game (2017)</li>
         </ul>
             
         </ol>
