--- a/repertoire.html
+++ b/repertoire.html
@@ -101,7 +101,7 @@
     
     <b>Nikolai Medtner</b><br>
     
-            Piano Sonata, Op.25 No.2, "Night Wind"<br> <br>
+        Sonata, Op.25 No.2, "Night Wind"<br> <br>
 
     <b>W.A. Mozart</b><br>
 
