--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,37 @@
 	<ol>
         	<li value=2>blog</li>
 		<p>
-            To be updated... Soon...
+            <b>14 June 2021</b>
+            <br><br>
+            Finished practicing at the faculty today, and, you know, was once again reminded 
+            of how much better my overall mental hygiene is when I practice on a "real" grand piano,
+            as opposed to a digital one, or even an upright. Not really sure why I somehow manage to
+            forget this simple fact with such frequency; regardless, it'll be nice next semester when
+            things are more or less returning to normalcy, and almost all of my practicing will be
+            done in these practice rooms.
+            <br><br>
+            Deafheaven released a new single recently, and I somehow hadn't listened to it prior to
+            today. I'm a little torn on the clean vocals, and an overall blandness, but I still have high
+            hopes for this next album as their songwriting is still the best in any black metal band 
+            making music these days (YOU CAN QUOTE ME).
+            <br><br>
+            Also extremely disappointed Tsitsipas couldn't upend Djokovic at Roland Garros; really stunning
+            match regardless. Another also: where is Kyrgios? (I know of his reasons for not participating
+            in many tournaments during "these times," and also find it hilarious that another reason he gave
+            for sitting out the French Open was that he just "doesn't like clay.") Watching Djokovic v. Tsitsipas
+            may finally get me to watch Borg v. McEnroe, that 2017 movie. Something about more-or-less-cookie-cutter
+            sports dramas always get to me.
+            <br><br>
+            To See the Next Part of the Dream, by Parannoul, is finally on Spotify. Go listen to it. And here's
+            a poem I was reminded of when sending some poems I really like to a friend of mine:
+            <br><br>
+            <i>Advice for Horsemen<br>by Michael Earl Craig</i><br><br>
+            When trying to catch a horse it helps if you look away.<br>
+            Eye contact just pisses them off.<br>
+            But you can’t fake looking away, horses<br>
+            know when you are doing this.<br>
+            You have to really look away.<br>
+            Some horsemen never come out of  this.
            
             
         </p>
