--- a/performances.html
+++ b/performances.html
@@ -26,7 +26,7 @@
 	<ol>
         	<li value=3>performances</li>
 		<p>
-            <a href="https://www.youtube.com/watch?v=rtwAji5MMik" target="_blank">Alban Berg - Sonate op. 1 (UdeM, 2019)</a>
+            <a href="https://youtu.be/v2o85UJ65BI" target="_blank">Nikolai Medtner - Piano Sonata, Op.25 No.2, "Night Wind" (UdeM, Salle Claude-Champagne, 2021)</a>
             <br>
             <a href="https://www.youtube.com/watch?v=pkzErCCOpkk" target="_blank">C.V. Alkan - Le festin d'Ésope, Op. 39 No. 12 (McGill, 2019)</a>
             <br>
