--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@
             <li value=8>upcoming events / évènements à venir</li>
 	
 		<p>
-           To be updated.
+           *gestures at entire world*
         </p>
 <p><a href="index.html">return home</a></p>
 </td>
