--- a/reading.html
+++ b/reading.html
@@ -27,10 +27,11 @@
             <li value=7>reading</li>
 	
 		<p>
-            June 2021 :<br>
+            September 2021 :<br>
             <ul>
                 <li>Marieke Lucas Rijneveld - The Discomfort of Evening (2020)</li>
-                <li>Karl Ove Knausgaard & Fredrik Ekelund - Home and Away: Writing the Beautiful Game (2017)</li>
+                <li>Tao Lin - Leave Society (2021)</li>
+                <li>Andrew Roberts - Napoleon: A Life (2014)</li>
         </ul>
             
         </ol>
