--- a/performances.html
+++ b/performances.html
@@ -26,17 +26,15 @@
 	<ol>
         	<li value=3>performances</li>
 		<p>
-            <a href="https://youtu.be/v2o85UJ65BI" target="_blank">Nikolai Medtner - Piano Sonata Op. 25 No. 2, "Night Wind" (UdeM, Salle Claude-Champagne, 2021)</a>
+            <a href="https://youtu.be/fGeLC_XsLWk" target="_blank">Nikolai Medtner - Piano Sonata Op. 25 No. 2, "Night Wind" (UdeM, Salle Claude-Champagne, 2021)</a>
             <br>
-            <a href="https://youtu.be/WCHthFBqdVg" target="_blank">Jenny Beck - Stand Still Here (Bowdoin, 2017)</a>
+            <a href="https://youtu.be/LCQDCFlESi4" target="_blank">Jenny Beck - Stand Still Here (Bowdoin, 2017)</a>
             <br>
-            <a href="https://www.youtube.com/watch?v=x5vgFKdg-Dc" target="_blank">C.V. Alkan - Le festin d'Ésope, Op. 39 No. 12 (Bowdoin, 2017)</a>
+            <a href="https://youtu.be/nV3FEN0hbeg" target="_blank">C.V. Alkan - Le festin d'Ésope, Op. 39 No. 12 (Bowdoin, 2017)</a>
             <br>
-            <a href="https://youtu.be/D3OjUHnnXig" target="_blank">Sigismond Thalberg - Fantaisie sur l´opéra « Moïse » de Rossini, op. 33 (McGill, 2017)</a>
+            <a href="https://youtu.be/xKNaPV5Tn7g" target="_blank">Sigismond Thalberg - Fantaisie sur l´opéra « Moïse » de Rossini, Op. 33 (McGill, 2017)</a>
             <br>
-            <a href="https://youtu.be/2sNlYuvYtrs" target="_blank">J.S. Bach - Partita No. 6 in E minor, BWV 830 (McGill, 2016)</a>
-            <br>
-            <a href="https://youtu.be/hGbbeHrWlP4" target="_blank">Bach-Busoni - Chaconne (UVM, 2014)</a>
+            <a href="https://youtu.be/cTl0_8aLAEM" target="_blank">Bach-Busoni - Chaconne (UVM, 2014)</a>
             
         </p>
 <p><a href="index.html">return home</a></p>
