--- a/performances.html
+++ b/performances.html
@@ -26,7 +26,7 @@
 	<ol>
         	<li value=3>performances</li>
 		<p>
-            <a href="https://youtu.be/fGeLC_XsLWk" target="_blank">Nikolai Medtner - Piano Sonata Op. 25 No. 2, "Night Wind" (UdeM, Salle Claude-Champagne, 2021)</a>
+            <a href="https://youtu.be/fGeLC_XsLWk" target="_blank">Nikolai Medtner - Sonata Op. 25 No. 2, "Night Wind" (UdeM, Salle Claude-Champagne, 2021)</a>
             <br>
             <a href="https://youtu.be/LCQDCFlESi4" target="_blank">Jenny Beck - Stand Still Here (Bowdoin, 2017)</a>
             <br>
