--- a/essays.html
+++ b/essays.html
@@ -26,8 +26,8 @@
 	<ol>
         	<li value=5>essays</li>
 		<p>
-            <a href="documents/wu_teng-Philosophy_Personality_Poetry-Nikolai_Medtner(2020).pdf" target="_blank">“And the stream leapt and danced and rushed noisily on”: Philosophy, Personality, and Poetry in the Works of Nikolai Medtner (2020)</a><br>
-            <a href="documents/wu_teng-liszt_thalberg_and_thumbs(2017).pdf" target="_blank">Liszt, Thalberg, and Thumbs (2017)</a>
+            “And the stream leapt and danced and rushed noisily on”: Philosophy, Personality, and Poetry in the Works of Nikolai Medtner (2020)<br>
+            Liszt, Thalberg, and Thumbs (2017)
            
             
         </p>
