Update listening and reading

--- a/reading.html
+++ b/reading.html
@@ -27,11 +27,15 @@
             <li value=7>reading</li>
 	
 		<p>
-            September 2021 :<br>
+            October 2022 :<br>
             <ul>
-                <li>Marieke Lucas Rijneveld - The Discomfort of Evening (2020)</li>
-                <li>Tao Lin - Leave Society (2021)</li>
+                <li>William Gaddis - J R (1975)</li>
+                <li>Sona Movsesian - The World's Worst Assistant (2022)</li>
                 <li>Andrew Roberts - Napoleon: A Life (2014)</li>
+                <li>Marcel Proust - In Search of Lost Time (1913 - 1927)</li>
+                  <ul>
+                    <li><i>Ongoing 2022 Proust project to complete In Search of Lost Time by the centenary of Proust's death</i></li>
+                  </ul>
         </ul>
             
         </ol>
