--- a/listening.html
+++ b/listening.html
@@ -28,13 +28,13 @@
 	
 		<p>
 
-                September 2021 :<br>
+                October 2022 :<br>
                 <ul>
-                        <li>TOOL - Fear Inoculum (2019)</li>
-                        <li>Bell Witch - Mirror Reaper (2017)</li>
-                        <li>Andrew W.K. - God Is Partying (2021)</li>
-                        <li>GAS -  Pop (2000)</li>
-                        <li>Mount Eerie - A Crow Looked at Me (2017)</li>
+                        <li>Charly Bliss - Young Enough (2019)</li>
+                        <li>Envy - Seimei (2022)</li>
+                        <li>Ether Coven - The Relationship Between the Hammer and the Nail (2022)</li>
+                        <li>Maurizio Pollini, Claudio Abbado, Berliner Philharmoniker -  Brahms: Piano Concerto No. 2 (1997)</li>
+                        <li>Let's Eat Grandma - Two Ribbons (2022)</li>
                 </ul>
 
             
