--- a/blog.html
+++ b/blog.html
@@ -26,39 +26,37 @@
 	<ol>
         	<li value=2>blog</li>
 		<p>
-            <b>14 June 2021</b>
+            <b>17 October 2022
+              <br>
+              19:36
+            </b>
             <br><br>
-            Finished practicing at the faculty today, and, you know, was once again reminded 
-            of how much better my overall mental hygiene is when I practice on a "real" grand piano,
-            as opposed to a digital one, or even an upright. Not really sure why I somehow manage to
-            forget this simple fact with such frequency; regardless, it'll be nice next semester when
-            things are more or less returning to normalcy, and almost all of my practicing will be
-            done in these practice rooms.
+            I'm about a month-and-a-half deep into this excursion of Brahms' Second Piano Concerto, 
+            which is providing to be both more, and less challenging than I anticipated. Even just two months
+            ago I considered the piece personally unplayable, harder still than his first concerto, which to me
+            was the most difficult concerto in standard repertoire that I've ever worked on, even after Rach III and Prok II.
             <br><br>
-            Deafheaven released a new single recently, and I somehow hadn't listened to it prior to
-            today. I'm a little torn on the clean vocals, and an overall blandness, but I still have high
-            hopes for this next album as their songwriting is still the best in any black metal band 
-            making music these days (YOU CAN QUOTE ME).
+            None of this to pat myself on the back, of course, it's more even of a brushing-my-teeth-in-public sort of thing, which,
+            granted, may be no better; regardless, there were more than a few discoveries I've made since starting to chip away at this behemoth
+            which surprised me:
             <br><br>
-            Also extremely disappointed Tsitsipas couldn't upend Djokovic at Roland Garros; really stunning
-            match regardless. Another also: where is Kyrgios? (I know of his reasons for not participating
-            in many tournaments during "these times," and also find it hilarious that another reason he gave
-            for sitting out the French Open was that he just "doesn't like clay.") Watching Djokovic v. Tsitsipas
-            may finally get me to watch Borg v. McEnroe, that 2017 movie. Something about more-or-less-cookie-cutter
-            sports dramas always get to me.
+            -It fits quite well under the hand, surprisingly enough--even those passages that, on first glance, appear risky-at-best
+            to play without a bit of trickery, make physical sense (I understand this is very much something which changes on a 
+            person-to-person basis)
+            <br>
+            -Stamina doesn't yet seem to be an issue, though this may be a result of a constant drip of adrenaline, ie., unsustainable
+            <br>
+            -The metronome marking for the first movement is nigh unplayable, I mean, I know tempi for Brahms have slowed considerably
+            in recent times but holy hell is <i>quarter note = 92</i> unforgiving
+            <br>
+            -Please stop writing treacherous runs that come out of silence
             <br><br>
-            To See the Next Part of the Dream, by Parannoul, is finally on Spotify. Go listen to it. And here's
-            a poem I was reminded of when sending some poems I really like to a friend of mine:
+            There's other things to talk about in the realms of Formula 1, chess, tennis, Gaddis (yo, rereading <i>J R</i> has been
+            life-changing) but I'm feeling quite fatigued at the moment
+            and so will wait to comment on those when I'm not mildly annoyed at my exhaustion-due-to-nothing.
             <br><br>
-            <i>Advice for Horsemen<br>by Michael Earl Craig</i><br><br>
-            When trying to catch a horse it helps if you look away.<br>
-            Eye contact just pisses them off.<br>
-            But you can’t fake looking away, horses<br>
-            know when you are doing this.<br>
-            You have to really look away.<br>
-            Some horsemen never come out of  this.
-           
-            
+            A friend recently sent me a weeknight recipe they concocted of artichoke pasta. Gonna go make that now. Did you know that
+            once artichoke buds bloom, the thing is rendered barely edible?            
         </p>
 <p><a href="index.html">return home</a></p>
 </td>
