--- a/performances.html
+++ b/performances.html
@@ -26,6 +26,8 @@
 	<ol>
         	<li value=3>performances</li>
 		<p>
+            <a href="https://youtu.be/X5HsQ3V0ShA" target="_blank"> Bach, Wagner, Liszt - First Year Doctoral Recital | Premier récital de doctorat (UdeM, Salle Claude-Champagne, 2022)</a>
+            <br>
             <a href="https://youtu.be/fGeLC_XsLWk" target="_blank">Nikolai Medtner - Sonata Op. 25 No. 2, "Night Wind" (UdeM, Salle Claude-Champagne, 2021)</a>
             <br>
             <a href="https://youtu.be/LCQDCFlESi4" target="_blank">Jenny Beck - Stand Still Here (Bowdoin, 2017)</a>
