--- a/events.html
+++ b/events.html
@@ -27,7 +27,19 @@
             <li value=8>upcoming events / évènements à venir</li>
 	
 		<p>
-           *gestures at entire world*
+           <b>Le Pub Classique (with Olivia Barnes & Sébastien Comtois) - 23 April 2025</b><br>
+           Salle Joseph-Rouleau<br>
+           305 Avenue du Mont-Royal E<br>
+           Montréal<br><br>
+
+            <b>Final Doctoral Recital - 17 May 2025</b><br>
+            Salle Claude-Champagne<br>
+            220 Avenue Vincent-d’Indy<br>
+            Montréal  
+
+
+
+
         </p>
 <p><a href="index.html">return home</a></p>
 </td>
