Update number of site pages

--- a/academic.html
+++ b/academic.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-57376253-2');
 </script>
 
-<title>essays</title>
+<title>academic</title>
 <meta http-equiv="Content-Type" content="text/html; charset="UTF-8"">
 <link rel="stylesheet" href="main.css">
 </head>
@@ -24,7 +24,7 @@
 <td>
 <p align="left"><a href="index.html">George Wu Teng</a></p>
 	<ol>
-        	<li value=5>academic</li>
+        	<li value=4>academic</li>
 		<p>
 
             Dissertation: Nikolai Medtner and the Legend of the Rusalka:
