--- a/fiction.html
+++ b/fiction.html
@@ -12,7 +12,7 @@
   gtag('config', 'UA-57376253-2');
 </script>
 
-<title>fiction</title>
+<title>literature</title>
 <meta http-equiv="Content-Type" content="text/html; charset="UTF-8"">
 <link rel="stylesheet" href="main.css">
 </head>
@@ -24,7 +24,7 @@
 <td>
 <p align="left"><a href="index.html">George Wu Teng</a></p>
 	<ol>
-        	<li value=5>fiction</li>
+        	<li value=4>literature</li>
 		<p>
             Solo Tuning (Cover story of <i>Companions & Earthbound</i>, Painwise Press, 2021)
             <br><br>
