--- a/teaching.html
+++ b/teaching.html
@@ -29,7 +29,7 @@
 </li>
          <div class="row">
   <div class="column"><p align="justify">
-    I am an extremely avid teacher of all ages and skill levels. I have been teaching since fourteen years old, either as a student's primary instructor,
+    I am an avid and devoted teacher of all ages and skill levels. I have been teaching piano performance since fourteen years old, either as a student's primary instructor,
     or a supplementary tutor, and it represents one of the strongest passions of my life.<br><br>
 
     I believe the objective of instructing music lies in the shared enjoyment of an activity which not only brings joy,
@@ -40,8 +40,8 @@
     their appreciation of classical music.<br><br>
     
     I also have a particular interest in working with those with learning disabilities; I have taught numerous pupils
-    with ADHD and autism spectrum disorder ranging from the ages of six-to-twenty, and have seen and felt the effect
-    teaching music has with them.<br><br>
+    with ADHD and autism spectrum disorder ranging from the ages of six-to-twenty, and have seen and felt the positive interactive effect
+    that learning and teaching music has with them.<br><br>
     
     References, as well as trial lessons are available by request.
         </p></div>
