--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,8 @@
 	
 		<p>
            e-mail : george.teng@umontreal.ca<br>
+           or<br>
+           gwteng@live.com
         </p>
 <p><a href="index.html">return home</a></p>
 </td>
